<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.homepage.HomePageActivity">

    <RelativeLayout
        android:id="@+id/rl_homepage"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimaryDark">

        <TextClock
            android:id="@+id/tc_homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:format12Hour="yyy-MM-dd hh:mm:ss EEEE"
            android:format24Hour="yyy-MM-dd hh:mm:ss EEEE"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/iv_homepage_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_homepage_numberstr"
            android:src="@drawable/ic_homepage_setting"/>

        <TextView
            android:id="@+id/tv_homepage_numberstr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/v_homepage_gap"
            android:gravity="center"
            android:text="机台编号"
            android:textColor="@color/white"/>


        <View
            android:id="@+id/v_homepage_gap"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_homepage_number"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_homepage_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="123-345-332"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_homepage_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rl_homepage"
        android:background="@color/mainColor"
        android:gravity="center"
        android:text="@string/title_homepage"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_homepage_bottom"
        android:layout_below="@+id/tv_homepage_title"/>

    <RelativeLayout
        android:id="@+id/rl_homepage_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:padding="@dimen/padding_def">

        <Button
            android:id="@+id/btn_homepage_bottom_1"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:includeFontPadding="false"
            android:text="@string/text_btn_homepage_1"/>

        <Button
            android:id="@+id/btn_homepage_bottom_2"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_1"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_2"/>

        <Button
            android:id="@+id/btn_homepage_bottom_3"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_2"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_3"/>

        <Button
            android:id="@+id/btn_homepage_bottom_4"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_3"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_4"/>

        <Button
            android:id="@+id/btn_homepage_bottom_5"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_4"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_5"/>

        <Button
            android:id="@+id/btn_homepage_bottom_6"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_5"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_6"/>

        <Button
            android:id="@+id/btn_homepage_bottom_7"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_6"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_7"/>

        <Button
            android:id="@+id/btn_homepage_bottom_8"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_7"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_8"/>

        <Button
            android:id="@+id/btn_homepage_bottom_9"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_8"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_9"/>

        <Button
            android:id="@+id/btn_homepage_bottom_a"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_9"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_a"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_homepage_bottom_b"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_a"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_b"/>

        <Button
            android:id="@+id/btn_homepage_bottom_c"
            android:layout_width="@dimen/bottom_size"
            android:layout_height="@dimen/bottom_size"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_def"
            android:layout_toEndOf="@+id/btn_homepage_bottom_b"
            android:background="@drawable/shape_bg_btn_homepage_bottom"
            android:text="@string/text_btn_homepage_c"/>

        <TextView
            android:id="@+id/tv_homepage_huodao"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@+id/btn_homepage_confirm"
            android:background="@drawable/shape_bg_tv_homepage_bottom"
            android:gravity="center"
            android:text="@string/huodaobianhao"
            android:textColor="@color/gray_42"/>


        <Button
            android:id="@+id/btn_homepage_confirm"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_bg_btn_homepage_confirm"
            android:text="@string/homepage_confirm"/>
    </RelativeLayout>
</RelativeLayout>